# Purple-Tech-Challange-Round2

./: .env.example  .gitignore  Purplle_Tech_Challenge_Presentation.pptx  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: business.yaml  cameras.yaml  zones.yaml
config/zones/: cam1.yaml  cam2.yaml  cam5.yaml
data/: sample_events.jsonl
docs/: CHOICES.md  DESIGN.md  EVENT_SCHEMA.md  SUBMISSION.md  openapi.json
infra/docker/: aggregator.Dockerfile  api.Dockerfile  dashboard.Dockerfile  ingest.Dockerfile  pos.Dockerfile
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
scripts/: dump_openapi.py  generate_presentation.py  run_benchmarks.ps1  run_benchmarks.sh  run_tests.ps1  run_tests.sh  start.ps1  start.sh
services/aggregator/: __main__.py  anomalies.py  db.py  handlers.py  seed.py  session.py
services/api/: main.py
services/dashboard/: app.py
services/events/: __init__.py  bus.py  schemas.py
services/ingest/: __main__.py  config.py  geom.py  synth.py  track_state.py  video_worker.py
services/pos/: __main__.py  csv_replay.py
store_intelligence.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/benchmarks/: test_synth_bench.py
tests/integration/: test_sales_endpoint.py  test_synth_to_metrics.py
tests/unit/: test_api.py  test_events.py  test_geom.py  test_pos_csv.py  test_seed.py  test_session.py  test_synth.py  test_track_state.py
