[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["services*"]

[project]
name = "store-intelligence"
version = "0.1.0"
description = "Store Intelligence System — Purplle Tech Challenge 2026 Round 2"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "redis[hiredis]>=5.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
]
detection = [
    # Reserved for slice 2.5 (real video ingest). Not installed by default
    # because torch/ultralytics inflate the image by ~ 1 GB.
    "opencv-python-headless>=4.10",
    "ultralytics>=8.2",
    "supervision>=0.21",
    "torchreid>=0.2.5",
    "faiss-cpu>=1.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
